--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Document</title>
 </head>
 <body>
-  Here will be a website
+  <app-button text="Click me" onclick="handleClick()">Click me</app-button>
 </body>
+<script>
+  const handleClick = () => {
+    console.log('Button clicked');
+  };
+</script>
+
+<script src="src/button.js"></script>
 </html>
